# OsgEditor

./: CMakeLists.txt
cmake/: FindosgQOpenGL.cmake
data/: bullet.frag  bullet.vert  circle_pass1.frag  circle_pass1.vert  circle_pass2.frag  circle_pass2.vert  circle_pass3.frag  circle_pass3.vert  coord.frag  coord.vert  line.frag  line.geom  line.vert  model.frag  model.vert
src/: CMakeLists.txt  main.cpp
src/scene/: CMakeLists.txt  GlClearGeode.cpp  GlClearGeode.h  Outline.cpp  Outline.h
src/test/: CMakeLists.txt  osgforest.cpp  osgoutline.cpp
src/ui/: CMakeLists.txt  CoordinateGeode.cpp  CoordinateGeode.h  GUIEventHandler.cpp  GUIEventHandler.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NodeDetailModel.cpp  NodeDetailModel.h  NodeTreeModel.cpp  NodeTreeModel.h  NodeView.cpp  NodeView.h  NodeView.ui  OsgDataEdit.cpp  OsgDataEdit.h  SetUnRefImageDataAfterApplyVisitor.cpp  SetUnRefImageDataAfterApplyVisitor.h  ShaderWindow.cpp  ShaderWindow.h  ShaderWindow.ui  StateSetView.cpp  StateSetView.h  StateSetView.ui  TestBulletLine.cpp  TestBulletLine.h  TestCull.cpp  TestCull.h  TestLine.cpp  TestLine.h  TestOutLine.cpp  TestOutLine.h  TestStencil.cpp  TestStencil.h  TextureListModel.cpp  TextureListModel.h  UiResource.qrc  Visitor.cpp  Visitor.h
third/: CMakeLists.txt
third/osgCDH/: CMakeLists.txt
third/osgCDH/include/osgCDH/: Outline.h
third/osgCDH/src/: CMakeLists.txt  Outline.cpp
